src/account.cpp
@@ -10,6 +10,7 @@
 #include "utils.h"
 
 #include <QLoggingCategory>
+#include <QWindow>
 
 Q_LOGGING_CATEGORY(XdgDesktopPortalKdeAccount, "xdp-kde-account")
 
@@ -41,6 +42,7 @@ uint AccountPortal::GetUserInformation(const QDBusObjectPath &handle,
     }
 
     UserInfoDialog *userInfoDialog = new UserInfoDialog(reason);
+    userInfoDialog->windowHandle()->show();
     Utils::setParentWindow(userInfoDialog->windowHandle(), parent_window);
 
     int result = userInfoDialog->exec();
